fix(sheet-cell): multi filter bug