@@ -4,9 +4,7 @@ import cell.Cell;
 import position.interfaces.IPosition;
 import range.IRange;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -26,28 +24,28 @@ public class CellFilter implements IFilter {
     }
 
     @Override
-    public List<Integer> ByValues(IRange range, Map<Character, List<String>> selectedValues) {
+    public List<Integer> ByValues(IRange range, List<String> selectedValues) {
         return byRange(range).stream()
-                .filter(cell -> isCellInSelectedValues(cell, selectedValues))
+                .filter(cell -> selectedValues.contains(cell.getEffectiveValue()))
                 .map(cell -> cell.getPosition().row())
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<Integer> byMultiColumns(IRange range, List<Map<Character,  List<String>>> selectedValues, boolean isAnd) {
+    public List<Integer> byMultiColumns(IRange range, Map<Character,  List<String>> selectedValues, boolean isAnd) {
         return isAnd ? ByAndValues(range, selectedValues) : ByOrValues(range, selectedValues);
     }
 
-    private List<Integer> ByAndValues(IRange range, List<Map<Character,  List<String>>> selectedValues) {
-        return selectedValues.stream()
-                .map(values -> ByValues(range, values))
-                .reduce((rows1, rows2) -> rows1.stream().filter(rows2::contains).collect(Collectors.toList()))
-                .orElse(Collections.emptyList());
-
+    private List<Integer> ByAndValues(IRange range, Map<Character,  List<String>> selectedValues) {
+        List<Integer> rows = selectedValues.values().stream()
+                .flatMap(values -> ByValues(range, values).stream()).toList();
+        return rows.stream().map(this::rowIndexToValueList)
+                .filter(rowValues -> containsAtLeastOneFromEachCol(rowValues, selectedValues))
+                .flatMap(rowValues -> rowValues.keySet().stream()).toList();
     }
 
-    private List<Integer> ByOrValues(IRange range, List<Map<Character,  List<String>>> selectedValues) {
-        return selectedValues.stream()
+    private List<Integer> ByOrValues(IRange range, Map<Character,  List<String>> selectedValues) {
+        return selectedValues.values().stream()
                 .map(values -> ByValues(range, values))
                 .reduce((rows1, rows2) -> Stream.concat(rows1.stream(), rows2.stream()).distinct().collect(Collectors.toList()))
                 .orElse(Collections.emptyList());
@@ -58,9 +56,20 @@ public class CellFilter implements IFilter {
         return byRange(range).stream().filter(cell -> rows.contains(cell.getPosition().row())).toList();
     }
 
-    private boolean isCellInSelectedValues(Cell cell, Map<Character,  List<String>> selectedValues) {
-        return selectedValues.containsKey(cell.getPosition().column())
-                && selectedValues.get(cell.getPosition().column()).stream()
-                .anyMatch(value -> value.equals(cell.getEffectiveValue()));
+    private Map<Integer, String> rowIndexToValueList(int row) {
+        Map<Integer, String> rowValues = new HashMap<>();
+        position2Cell.forEach((key, value) -> {
+            if (key.row() == row) {
+                rowValues.put(row, value.getEffectiveValue());
+            }
+        });
+        return rowValues;
+    }
+
+    private boolean containsAtLeastOneFromEachCol(Map<Integer, String> rowValues, Map<Character, List<String>> selectedValues) {
+        return selectedValues.entrySet().stream()
+                .allMatch(entry ->
+                        rowValues.values().stream()
+                                .anyMatch(value -> entry.getValue().contains(value)));
     }
 }
